
Changes since version 1.5-26

  * residuals.plm: residuals extracted by residuals(plm_object) now have class c("pseries", "numeric")
                   (was just "pseries" before).

Changes since version 1.5-27

  * little speed up of within transformation in the two-ways unbalanced case (in model.matrix.pFormula).
  * little speed up for some more transformations by using .colMeans instead of apply(X, 2, mean)
    (in model.matrix.pFormula).
    
Changes since version 1.5-28

  * phtest (regression based): if only one regressor in formula, the test does not stop anymore.

Changes since version 1.5-29

  * print.pdata.frame: workaround to prevent error when printing pdata frames with duplicated row names
    (original row names are suppressed for printing).
    
Changes since version 1.5-30

  * lagt.pseries (experimental, non exported function): now handles NA values in time index.
  * warning about NA in time index turned into a note being printed (in func pdata.frame).
  
Changes since version 1.5-31

  * fixef: return value is now class c("fixef", "numeric") ("numeric" added).
  * summary.fixef: return value is now of class c("summary.fixef", "matrix") ("matrix" added);
                   type and df.residual added as attributes.
    Both class additions allow easier further processing of the return values. 
  
Changes since version 1.5-32

  * pcdtest: fixed p-value for cross-sectional dependence scaled LM test (pcdtest(..., test = "sclm")).

Changes since version 1.5-33

  * (internal) pdiff gained 'effect' argument and thus is more general.
  * plm: trying to estimate first-difference (FD) models with effect="time" or "twoways" is now prevented 
         with meaningful error messages; footnote 3 in vignette slightly adapted to reflect this.
  
Changes since version 1.5-34

  * Ftest: support for vcovs from package clubSandwich to allow df2 adjustment in robust test
           (new func trans_clubSandwich_vcov added for this purpose).