@@ -743,5 +743,8 @@ Changes since version 1.5-33
   
 Changes since version 1.5-34
 
-  * Ftest: support for vcovs from package clubSandwich to allow df2 adjustment in robust test
+  * Ftest: support for vcovs from package clubSandwich to allow df2 adjustment in robust F test
            (new func trans_clubSandwich_vcov added for this purpose).
+  * (internal) model.matrix.pFormula: case "pooling" added to twoway/unbalanced condition;
+                                      for unknown cases, give meaningful error.
+  
